# software-engineering-exercise

./: README.md  main.py  models.py  pyproject.toml  schema.py  test_main.py
.github/workflows/: python-package.yml
alembic/: env.py
alembic/versions/: 14fab298f030_new_migration.py  2717baa8998d_new_migration.py  b9cccddf690c_new_migration.py
views/: assign-codes.html  index.html  view-codes.html  view-message-data.html  view-messages.html
