
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axs1485", email = "salonna0108@gmail.com"},
]
dependencies = [
    "fastapi>=0.97.0",
    "pytest>=7.3.2",
    "uvicorn[standard]>=0.22.0",
    "curio>=1.6",
    "httpx>=0.24.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
